fixed issue with displaying on iPhones but not happy about how I did it :(

--- a/css/_media.scss
+++ b/css/_media.scss
@@ -76,11 +76,13 @@
 
     body {
       flex-direction: column;
+      display: block;
     }
 
     main{
 
       position: relative;
+      flex: 1 0 70%;
 
         h1 {
             font-size: 10vw;
@@ -116,6 +118,7 @@
 
     div#asider {
       width: 100%;
+      position: static;
     }
 
     .postlist h2 {
@@ -128,6 +131,7 @@
 
     div#overasider {
       position: static;
+      flex: 1 1 30%;
       height: auto;
       width: 100%;
     }
@@ -140,6 +144,7 @@
     article {
 
       font-size: 2rem;
+      margin-top: 0;
 
       h2 {
         max-width: 90%;
